# PEAKCUT

./: .gitignore  DEPLOY.md  README.md
.github/workflows/: ci.yml  java-ci.yml  web-ci.yml
clients/java/: .gitignore  README.md  pom.xml
docs/: ARCHITECTURE.md  DEPLOY.md
docs/superpowers/plans/: 2026-07-10-worker-pipeline.md  2026-07-11-web-app.md
docs/superpowers/specs/: 2026-07-09-shorts-factory-design.md
studio/: README.md
web/: .env.example  .gitignore  SETUP.md  auth.ts  docker-compose.yml  drizzle.config.ts  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  proxy.ts  vitest.config.ts  vitest.setup.ts
web/actions/: account.test.ts  account.ts  jobs.test.ts  jobs.ts
web/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
web/app/_components/: motion.tsx
web/app/admin/: page.tsx  template.tsx
web/app/dashboard/: layout.tsx  loading.tsx  page.tsx
web/app/settings/: page.tsx
web/components/: delete-account-dialog.tsx  job-status-badge.tsx
web/components/ui/: button.tsx
web/db/init/: 01-test-db.sql
web/e2e/: admin.spec.ts  auth.spec.ts  caption-style.spec.ts  dashboard.spec.ts  happy-path.spec.ts  job-live.spec.ts  landing.spec.ts  new-job.spec.ts  settings.spec.ts  upload.spec.ts
web/lib/: admin-data.test.ts  admin-data.ts  admin.test.ts  admin.ts  credits.test.ts  credits.ts  data.ts  env.ts  format-evidence.test.ts  format-evidence.ts  job-events.test.ts  job-events.ts  job-status.ts  run-import.test.ts  run-import.ts  storage.test.ts  storage.ts  types.ts  utils.ts  worker.test.ts  worker.ts
web/lib/db/: index.ts  schema.test.ts  schema.ts
web/test/fixtures/: agent_events.fixture.jsonl  run.fixture.json
worker/: README.md  pyproject.toml  requirements-modal.txt
worker/models/: SOURCE.txt
worker/scripts/: fetch_face_model.py  make_fixtures.py  modal_spike.py
worker/src/shorts/: agent_log.py  cli.py  export.py  ffmpeg.py  ingest.py  modal_app.py  pipeline.py  qa.py  types.py
worker/src/shorts/agents/: critic.py  evidence.py  hooks.py  llm.py  orchestrator.py  scout.py  surgeon.py
worker/src/shorts/publish/: __init__.py  generate.py  metadata.py  youtube.py
worker/src/shorts/render/: captions.py  renderer.py
worker/src/shorts/signals/: align.py  audio.py  audio_events.py  index.py  transcript.py  video.py
worker/tests/: conftest.py  test_captions.py  test_critic.py  test_e2e.py  test_evidence.py  test_export.py  test_ffmpeg.py  test_fixtures.py  test_hooks.py  test_index.py  test_ingest.py  test_llm.py  test_pipeline.py  test_publish_metadata.py  test_publish_youtube.py  test_qa.py  test_render.py  test_repair.py  test_resume.py  test_scout.py  test_scout_llm.py  test_signals_advanced.py  test_signals_audio.py  test_signals_video.py  test_surgeon.py
worker/tests/fixtures/: MANIFEST.json  synth_av.truth.json
(+61 files in other folders)
